# examcraft

./: .dockerignore  .env.example  .env.production.example  .env.stripe.example  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json.template  .mintlifyignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRA_IMPORT_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_TEST_REPORT.md  DOCUMENT_UPLOAD_SPEC.md  Dockerfile.allinone  Dockerfile.qdrant  FEATURES_OVERVIEW.md  FEATURE_BRANCH_SETUP.md  FEATURE_MAPPING.md  IMPORT_FIX_SUMMARY_2025.md  LICENSE  MCP.md  MINTLIFY_README.md  MONOREPO_SETUP.md  Makefile  NEXT_STEPS.md  PHASE3_TEST_RESULTS.md  PR_DESCRIPTION.md  README.md  STRIPE_QUICKSTART.md  STRIPE_SETUP_GUIDE.md  TASKS.md  (+32 more)
.claude/: settings.local.json
.github/: pull_request_template.md
api-reference/: introduction.mdx
backend/: .coverage  .env.example  Dockerfile  Dockerfile.flower  Dockerfile.fly  Dockerfile.production  README.md  alembic.ini  celery_app.py  celery_app_flower.py  database.py  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
changelog/: index.html
docker/: Qdrant.Dockerfile  nginx-allinone.conf  start-allinone.sh  supervisord-allinone.conf
docs/: ADMIN_PROMPT_MANAGEMENT.md  ASYNC_DOCUMENT_PROCESSING.md  DEPLOYMENT_GUI_MODERNIZATION.md  EXECUTIVE_SUMMARY.md  FEATURES.md  GITHUB_SECRETS.md  INDEX.md  LINT_CHECKS.md  MONETIZATION_STRATEGY.md  PRD-Template-JSON-Wrapper.md  PRE_COMMIT_HOOKS.md  QDRANT_MIGRATION.md  README.adoc  RELEASE_TIMELINE.md  RENDER_DEPLOYMENT.md  ROADMAP.md  SCREENSHOTS.md  SCREENSHOT_CHECKLIST.md  SENTRY.md  TEST_COVERAGE_FIX_12_13.md  USER_GUIDE.md  WORKTREE_SETUP.md  browser-compatibility.md  e2e-tests-next-steps.md  index.adoc  testing-guide.md  testing-implementation-summary.md  testing-strategy.md
docs-site/: mkdocs.yml
en/: index.html  sitemap.xml
essentials/: overview.mdx  subscription-tiers.mdx
extracted_markdown/: Heapsort und Priority Search Queues.md  Praktische Algorithmik mit Python.md
features/: chatbot.mdx  document-upload.mdx  question-generation.mdx  rag-generation.mdx
fr/: index.html  sitemap.xml
frontend/: Dockerfile  Dockerfile.fly  README.md  (+8 more)
(+703 files in other folders)
