[project]
name = "examcraft"
version = "1.1.0"
description = "AI-powered exam question generation platform with IBM Docling integration"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "fastapi>=0.117.1",
    "sqlalchemy>=2.0.43",
    "docling>=2.9.0",
    "pypdf>=6.1.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
