[project]
name = "examcraft"
version = "1.1.0"
description = "AI-powered exam question generation platform with IBM Docling integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "sqlalchemy>=2.0.43",
    "docling>=2.9.0",
    "pypdf>=6.1.0",
    "email-validator>=2.3.0",
    "alembic>=1.17.0",
    "qdrant-client>=1.15.0",
    "sentence-transformers>=5.1.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
